--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -1,3 +1,11 @@
-h1 {
-    color: mediumvioletred;
+@import "./header.scss";
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+}
+
+html {
+    font-size: 62.5%;
+    font-family: "Roboto", sans-serif;
 }
