--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -1,3 +1,23 @@
+@import "./header.scss";
+
 h1 {
     color: mediumvioletred;
+}
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+}
+
+html {
+    font-size: 62.5%;
+    font-family: "Roboto", sans-serif;
+}
+
+.start_success {
+    text-align: center;
+    background-color: green;
+    padding: 15px;
+    font-size: 2rem;
+    color: white;
 }
